# AutoCommitt

./: .pre-commit-config.yaml  CONTRIBUTING.md  README.md  main.py  pyproject.toml  requirements.txt  setup.py
.github/: .dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: release-notes.md  release.yaml
autocommit/: main.py
autocommitt/: cli.py  main.py
autocommitt/cli/: main.py
autocommitt/core/: commit_manager.py  ollama_manager.py
autocommitt/utils/: check_installation.py  config_manager.py
src/autocommitt/: setup.py
src/autocommitt/cli/: main.py
src/autocommitt/core/: commit_manager.py  ollama_manager.py
src/autocommitt/utils/: check_installation.py  config_manager.py
