[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "autocommitt"
version = "0.1.10"
description = "A CLI tool for generating editable commit messages locally using Ollama."
readme = "README.md"
authors = [{ name = "Anish Dabhane", email = "anishdabhane@gmail.com" }]
license = { text = "Apache-2.0" }
keywords = ["autocommit", "aicommit", "git automation", "CLI tool", "local AI"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Operating System :: Unix",
    "Operating System :: Microsoft :: Windows :: Windows 10",
    "Operating System :: Microsoft :: Windows :: Windows 11",
    "Operating System :: MacOS"
]
requires-python = ">=3.10"

dependencies = [
    "ollama",
    "typer",
    "requests",
    "platformdirs",
    "psutil"
]

[project.optional-dependencies]
windows = ["pyreadline3"]

[project.scripts]
autocommitt = "autocommitt.cli.main:app"
act = "autocommitt.cli.main:app"

[tool.setuptools]
packages = ["find:"]  # This will automatically find packages in your source directory

